--- a/src/index.css
+++ b/src/index.css
@@ -19,9 +19,31 @@ code {
   background: #2c3e50;
 } */
 
-.video {
+.localvideo {
+  bottom: 100px;
   width: 40vw;
   height: 30vw;
   margin: 2rem;
   background: #2c3e50;
+}
+.remotevideo {
+  right: 10px;
+  width: 15vw;
+  height: 10vw;
+  margin: 2rem;
+  background: #2c3e50;
+}
+.remote {
+  margin-top: -210px;
+  margin-left: 340px;
+}
+
+video {
+  transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg); /* Safari and Chrome */
+  -moz-transform: rotateY(180deg); /* Firefox */
+}
+
+button {
+  size: 20%;
 }
