--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(36, 133, 100);
+  background-color: hsl(228, 45%, 44%);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -16,6 +16,9 @@ code {
   overflow: hidden;
 }
 .header {
+  font-weight: 200;
+  font-size: large;
+  text-align: center;
   margin-block-start: 0em;
   margin-block-end: 0em;
 }
@@ -77,28 +80,3 @@ video {
   margin-left: 10px;
   position: absolute;
 }
-.CallHead {
-}
-/* .App-header {
-  font-size: 100px;
-}
-
-.remote {
-  margin-top: -210px;
-  margin-left: 340px;
-}
-
-
-
-.Call {
-  margin-left: 100px;
-}
-button {
-  width: 30%;
-}
-.call2 {
-  position: absolute;
-  margin-top: inherit;
-  display: table;
-  width: 15%;
-} */
